--- a/style.css
+++ b/style.css
@@ -22,20 +22,20 @@
 
 body {
     margin: 0;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
+    background: #020024;
+    background: linear-gradient(315deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 35%, rgba(0, 212, 255, 1) 100%);
 }
 
 .container {
-    height: 100%;
+    min-height: 100vh;
     display: grid;
     grid-template-columns: 20rem 1fr;
     grid-template-rows: 12rem 1fr;
     gap: .5rem;
     padding: .5rem;
-    background: #020024;
-    background: linear-gradient(315deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 35%, rgba(0, 212, 255, 1) 100%);
 }
 
 .header {
@@ -176,27 +176,78 @@ body {
 
 
 .main {
-
     display: grid;
+    column-gap: 1rem;
+    row-gap: 2rem;
+    grid-template-columns: 1fr 20rem;
+    grid-template-rows: 630px auto;
+    padding: 1rem;
 
-}
+    & .cards {
+        grid-column: 1;
+        grid-row: 1 / -1;
+    }
 
-.card {
-    width: 200px;
-    height: 200px;
-    /* From https://css.glass */
-    /* From https://css.glass */
-    background: rgba(255, 255, 255, 0);
-    border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(20px);
-    -webkit-backdrop-filter: blur(20px);
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    /* From https://css.glass */
-    background: rgba(255, 255, 255, 0);
-    border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(20px);
-    -webkit-backdrop-filter: blur(20px);
-    border: 1px solid rgba(255, 255, 255, 0.3);
+    & .announcements {
+        grid-column: 2;
+        grid-row: 1;
+    }
+
+    & .trending {
+        grid-column: 2;
+        grid-row: 2;
+        color: white;
+    }
+
+    & .trending-container {
+        border-radius: 1rem;
+        padding: 2rem;
+        display: grid;
+        gap: 1rem;
+    }
+
+    & .trending-item {
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+    }
+
+    & h2 {
+        margin-bottom: .5rem;
+        color: white;
+    }
+
+    & .cards-container {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 2rem;
+    }
+
+    & .card {
+        padding: 2rem;
+        width: 23rem;
+        height: 15rem;
+        border-radius: 1rem;
+        border-left-width: 10px;
+        color: var(--color-primary);
+    }
+
+    & .card>p {
+        margin-bottom: 1rem;
+    }
+
+    & .card>div {
+        display: flex;
+        justify-content: end;
+        gap: 1rem;
+    }
+
+    & .announcements-container {
+        border-radius: 1rem;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        padding: 2rem;
+        color: white;
+    }
 }
